--- a/about/css/heroic-features.css
+++ b/about/css/heroic-features.css
@@ -4,9 +4,10 @@ body {
 }
 
 .card-text {
-  color: rgb(0, 0, 0)
+  color: rgb(0, 0, 0) !important;
 
 }
 .card-body{
-  color:black
+  color:cyan !important;
+  
 }
