--- a/shop/css/shop-homepage.css
+++ b/shop/css/shop-homepage.css
@@ -1,3 +1,21 @@
 body {
   padding-top: 56px;
 }
+.pagination {
+  display: inline-block;
+}
+
+.pagination a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color .3s;
+}
+
+.pagination a.active {
+  background-color: red;
+  color: white;
+}
+
+.pagination a:hover:not(.active) {background-color:lightgrey;}
