--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body{
 
 
 .topnav {
-  overflow: hidden;
   background-color: lightgrey;
 }
 
@@ -56,27 +55,33 @@ body{
     border: 1px solid #ccc;
   }
 }
-.dropdown {
-  float: left;
-  overflow: hidden;
+  
+
+img{
+  width: 20%;
+  height: 20%;
+  border-radius: 20%;
+  display: block;
+  margin-left: auto;
+   margin-right: auto;
 }
 
-.dropdown .dropbtn {
-  font-size: 16px;  
+
+.dropbtn-w3 {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
   border: none;
-  outline: none;
-  color: black;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
+  cursor: pointer;
 }
 
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
+.dropdown-w3 {
+  position: relative;
+  display: inline-block;
 }
 
-.dropdown-content {
+.dropdown-content-w3 {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
@@ -85,26 +90,20 @@ body{
   z-index: 1;
 }
 
-.dropdown-content a {
-  float: none;
+.dropdown-content-w3 a {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
-  text-align: left;
+  float:none;
 }
 
-.dropdown-content a:hover {
-  background-color: red;
-}
+.dropdown-content-w3 a:hover {background-color: #f1f1f1}
 
-.dropdown:hover .dropdown-content {
+.dropdown-w3:hover .dropdown-content-w3 {
   display: block;
 }
 
-img{
-  border-radius: 20%;
-  display: block;
-  margin-left: auto;
-   margin-right: auto;
+.dropdown-w3:hover .dropbtn-w3 {
+  background-color: #3e8e41;
 }
