--- a/shop/used-9.10/css/shop-homepage.css
+++ b/shop/used-9.10/css/shop-homepage.css
@@ -6,18 +6,25 @@ body {
 }
 
 .pagination a {
-  color: black;
+  color: rgb(179, 0, 0);
   float: left;
   padding: 8px 16px;
   text-decoration: none;
 }
 
 .pagination a.active {
-  background-color: lightgrey;
+  background-color: rgb(192, 0, 0);
   color: white;
 }
 
-.pagination a:hover:not(.active) {background-color: #ddd;}
+.pagination a:hover:not(.active) {background-color: rgb(0, 0, 0);}
 .my-4{
   color: azure
 }
+
+body{
+  background-image: url("https://hdwallpaperim.com/wp-content/uploads/2017/08/31/160201-black-red-white-long_exposure-748x468.jpg");
+  
+
+}
+
