--- a/shop/used-9.10/css/shop-homepage.css
+++ b/shop/used-9.10/css/shop-homepage.css
@@ -17,14 +17,12 @@ body {
   color: white;
 }
 
-.pagination a:hover:not(.active) {background-color: rgb(0, 0, 0);}
+.pagination a:hover:not(.active) {
+  background-color: rgb(0, 0, 0);
+}
+
+
+
 .my-4{
-  color: azure
+  color: azure;
 }
-
-body{
-  background-image: url("https://hdwallpaperim.com/wp-content/uploads/2017/08/31/160201-black-red-white-long_exposure-748x468.jpg");
-  
-
-}
-
