--- a/shop/used-9.10/css/style.css
+++ b/shop/used-9.10/css/style.css
@@ -10037,4 +10037,77 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6;
   }
 }
+
+
+
+body {
+  padding-top: 56px;
+}
+.pagination {
+  display: inline-block;
+}
+
+.pagination a {
+  color: rgb(179, 0, 0);
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+.pagination a.active {
+  background-color: rgb(192, 0, 0);
+  color: white;
+}
+
+.pagination a:hover:not(.active) {
+  background-color: rgb(0, 0, 0);
+}
+
+
+
+.my-4{
+  color: azure;
+}
+
+
+.collapsenavbar-collapse{
+  color:rgb(255, 0, 0);
+}
+
+
+
+.btn-outline-success {
+  color: rgb(136, 7, 7);
+  border-color: rgb(136, 7, 7);
+}
+
+.btn-outline-success:hover {
+  color: #fff;
+  background-color: rgb(136, 7, 7);
+  border-color: rgb(136, 7, 7);
+}
+
+.btn-outline-success:focus, .btn-outline-success.focus {
+  box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.5);
+}
+
+.btn-outline-success.disabled, .btn-outline-success:disabled {
+  color: rgb(136, 7, 7);
+  background-color: transparent;
+}
+
+.btn-outline-success:not(:disabled):not(.disabled):active, .btn-outline-success:not(:disabled):not(.disabled).active,
+.show > .btn-outline-success.dropdown-toggle {
+  color: #fff;
+  background-color: rgb(136, 7, 7);
+  border-color: rgb(136, 7, 7);
+}
+
+.btn-outline-success:not(:disabled):not(.disabled):active:focus, .btn-outline-success:not(:disabled):not(.disabled).active:focus,
+.show > .btn-outline-success.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.5);
+}
+
+
+
 /*# sourceMappingURL=bootstrap.css.map */
