--- a/shop/used-9.10/css/style.css
+++ b/shop/used-9.10/css/style.css
@@ -10037,12 +10037,15 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6;
   }
 }
+.header {
+  padding: 10px 16px;
+  background: #000;
+  color: #f1f1f1;}
 
-
-
-body {
-  padding-top: 56px;
+.py-5 {
+  background-color: #000
 }
+
 .pagination {
   display: inline-block;
 }
