--- a/shop/used-9.10/css/page3-style.css
+++ b/shop/used-9.10/css/page3-style.css
@@ -1,3 +1,9 @@
 body{
-  background-image: url("https://images4.alphacoders.com/778/77806.jpg")
+  background-image: url("https://images4.alphacoders.com/778/77806.jpg");
+  
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
