--- a/shop/used-9.10/css/style.css
+++ b/shop/used-9.10/css/style.css
@@ -155,7 +155,7 @@ sup {
 }
 
 a {
-  color: white;
+  color: white !important;
   text-decoration: none;
   background-color: transparent;
 }
@@ -4560,7 +4560,7 @@ input[type="button"].btn-block {
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(0, 0, 0) !important;
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
@@ -4596,10 +4596,11 @@ input[type="button"].btn-block {
   margin-bottom: 0;
 }
 
-.card-text:last-child {
+.card-text {
   margin-bottom: 0;
   color: rgb(255, 255, 255);
 }
+
 
 .card-link:hover {
   text-decoration: none;
@@ -5356,7 +5357,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   display: block;
   padding: 0.75rem 1.25rem;
   margin-bottom: -1px;
-  background-color: #000;
+  background-color: #000 !important;
   border: 1px solid rgba(0, 0, 0, 0.125);
 }
 
@@ -10087,22 +10088,22 @@ a.text-dark:hover, a.text-dark:focus {
 
 
 .btn-outline-success {
-  color: rgb(136, 7, 7);
-  border-color: rgb(136, 7, 7);
+  color: rgb(136, 7, 7)!important;
+  border-color: rgb(136, 7, 7)!important;
 }
 
 .btn-outline-success:hover {
-  color: #fff;
-  background-color: rgb(136, 7, 7);
-  border-color: rgb(136, 7, 7);
+  color: white !important;
+  background-color: rgb(136, 7, 7)!important;
+  border-color: rgb(136, 7, 7)!important;
 }
 
 .btn-outline-success:focus, .btn-outline-success.focus {
-  box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.5);
+  box-shadow: 0 0 0 0.2rem rgb(128, 0, 0)!important;
 }
 
 .btn-outline-success.disabled, .btn-outline-success:disabled {
-  color: rgb(136, 7, 7);
+  color: rgb(136, 7, 7)!!important;
   background-color: transparent;
 }
 
@@ -10115,7 +10116,7 @@ a.text-dark:hover, a.text-dark:focus {
 
 .btn-outline-success:not(:disabled):not(.disabled):active:focus, .btn-outline-success:not(:disabled):not(.disabled).active:focus,
 .show > .btn-outline-success.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.5);
+  box-shadow: 0 0 0 0.2rem rgb(124, 2, 2)!important;
 }
 
 
