--- a/shop/used-9.10/css/style.css
+++ b/shop/used-9.10/css/style.css
@@ -9931,7 +9931,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .text-muted {
-  color: #6c757d !important;
+  color: #ffffff !important;
 }
 
 .text-black-50 {
