--- a/shop/used-9.10/css/page1-style.css
+++ b/shop/used-9.10/css/page1-style.css
@@ -14,11 +14,11 @@ body {
 
 .pagination a.active {
   background-color: rgb(192, 0, 0);
-  color: white;
+  color: rgb(255, 2, 2);
 }
 
 .pagination a:hover:not(.active) {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(255, 0, 0);
 }
 .navbar {
   top: -80px;
@@ -26,7 +26,7 @@ body {
 
 
 .my-4{
-  color: azure;
+  color: rgb(255, 0, 0);
 }
 ul.social-icon{
   margin: 0;
@@ -42,7 +42,7 @@ ul.social-icon{
   }
   ul.social-icon li .fa{
   font-size: 40px;
-  color: #262626;
+  color: #ff0000;
   line-height: 80px;
   transition: .5s;
   
@@ -65,7 +65,7 @@ ul.social-icon{
   left: -20px;
   height: 100%;
   width: 20px;
-  background: #b1b1b1;
+  background: #ff0000;
   transition: .5s;
   transform: rotate(0deg) skewY(-45deg);
   }
@@ -76,39 +76,39 @@ ul.social-icon{
   left: -11px;
   height: 20px;
   width: 100%;
-  background: #b1b1b1;
+  background: #ff0000;
   transition: .5s;
   transform: rotate(0deg) skewX(-45deg);
   }
   ul.social-icon li a:hover{
   transform: perspective(1000px) rotate(-30deg) skew(25deg) translate(20px, -20px);
-  box-shadow: -50px 50px 50px rgb(0, 0, 0, 0.5);
+  box-shadow: -50px 50px 50px rgb(255, 5, 5);
   }
   ul.social-icon li:hover .fa{
-  color: #fff;
+  color: rgb(255, 255, 255);
   }
   ul.social-icon li a:hover{
   transform: perspective(1000px) rotate(-30deg) skew(25deg) translate(20px, -20px);
-  box-shadow: -50px 50px 50px rgb(0, 0, 0, 0.5);
+  box-shadow: -50px 50px 50px rgba(0, 0, 0, 0.89);
   }
   ul.social-icon li:hover:nth-child(1) a{
-  background: #3b5999;
+  background: #000000;
   }
   
   ul.social-icon li:hover:nth-child(1) a:before{
-  background: #2e4a86;
+  background: #000000;
   }
   ul.social-icon li:hover:nth-child(1) a:after{
-  background: #4a69ad;
+  background: #ff0000;
   }
   ul.social-icon li:hover:nth-child(2) a{
-  background: #55acee;
+  background: #ff0000;
   }
   ul.social-icon li:hover:nth-child(2) a:before{
-  background: #4184b7;
+  background: #000000;
   }
   ul.social-icon li:hover:nth-child(2) a:after{
-  background: #4d9fde;
+  background: #0c0c0c;
   }
   ul.social-icon li:hover:nth-child(3) a{
   background: #dd4b39;
@@ -122,7 +122,7 @@ ul.social-icon{
   }
   
   ul.social-icon li:hover:nth-child(4) a{
-  background: #0077B5;
+  background: rgb(255, 0, 0);
   }
   
   ul.social-icon li:hover:nth-child(4) a:before{
