--- a/shop/used-9.10/css/page1-style.css
+++ b/shop/used-9.10/css/page1-style.css
@@ -56,7 +56,7 @@ ul.social-icon{
   text-align: center;
   transform: perspective(100px) rotate(-30deg) skew(25deg) translate(0,0);
   transition: .5s;
-  box-shadow: -20px 20px 10px rgb(0, 0, 0, 0.5);
+  box-shadow: -20px 20px 10px rgb(255, 0, 0);
   }
   ul.social-icon li a::before{
   content: "";
@@ -82,7 +82,7 @@ ul.social-icon{
   }
   ul.social-icon li a:hover{
   transform: perspective(1000px) rotate(-30deg) skew(25deg) translate(20px, -20px);
-  box-shadow: -50px 50px 50px rgb(255, 5, 5);
+  box-shadow: -50px 50px 50px rgb(0, 0, 0);
   }
   ul.social-icon li:hover .fa{
   color: rgb(255, 255, 255);
@@ -96,7 +96,7 @@ ul.social-icon{
   }
   
   ul.social-icon li:hover:nth-child(1) a:before{
-  background: #000000;
+  background: #ff0000;
   }
   ul.social-icon li:hover:nth-child(1) a:after{
   background: #ff0000;
