--- a/shop/brand-new/css/shop-homepage.css
+++ b/shop/brand-new/css/shop-homepage.css
@@ -581,5 +581,16 @@ ul.social-icon{
 .navbar-dark .navbar-text a:hover, .navbar-dark .navbar-text a:focus {
   color: #fff;
 }
-
-py-5 bg-dark
+body{
+  background-image:url("https://cdn1.vectorstock.com/i/1000x1000/09/90/burst-red-and-black-background-with-ray-and-star-l-vector-2850990.jpg")
+}
+body{
+    background-repeat: no-repeat;
+    width:
+}
+.navbar{
+  top:-80px
+}
+.my-4{
+  color: white;
+}
