--- a/shop/used-9.10/css/page2-style.css
+++ b/shop/used-9.10/css/page2-style.css
@@ -33,7 +33,7 @@ ul.social-icon{
     }
     ul.social-icon li .fa{
     font-size: 40px;
-    color: #262626;
+    color: #ff0000;
     line-height: 80px;
     transition: .5s;
     
@@ -56,7 +56,7 @@ ul.social-icon{
     left: -20px;
     height: 100%;
     width: 20px;
-    background: #b1b1b1;
+    background: #ff0000;
     transition: .5s;
     transform: rotate(0deg) skewY(-45deg);
     }
@@ -67,7 +67,7 @@ ul.social-icon{
     left: -11px;
     height: 20px;
     width: 100%;
-    background: #b1b1b1;
+    background: #ff0000;
     transition: .5s;
     transform: rotate(0deg) skewX(-45deg);
     }
