--- a/shop/used-9.10/css/page3-style.css
+++ b/shop/used-9.10/css/page3-style.css
@@ -15,7 +15,9 @@ ul.social-icon{
 
   
   }
-
+  ul.social-icon li:hover .fa{
+    color:red;
+  }
   .navbar {
     top: -25px;
   }
@@ -26,7 +28,7 @@ ul.social-icon{
   }
   ul.social-icon li .fa{
   font-size: 40px;
-  color: #262626;
+  color: #fd0000;
   line-height: 80px;
   transition: .5s;
   
@@ -49,7 +51,7 @@ ul.social-icon{
   left: -20px;
   height: 100%;
   width: 20px;
-  background: #b1b1b1;
+  background: #fd0000;
   transition: .5s;
   transform: rotate(0deg) skewY(-45deg);
   }
@@ -60,7 +62,7 @@ ul.social-icon{
   left: -11px;
   height: 20px;
   width: 100%;
-  background: #b1b1b1;
+  background: #ff0000;
   transition: .5s;
   transform: rotate(0deg) skewX(-45deg);
   }
@@ -76,7 +78,7 @@ ul.social-icon{
   box-shadow: -50px 50px 50px rgb(0, 0, 0, 0.5);
   }
   ul.social-icon li:hover:nth-child(1) a{
-  background: #3b5999;
+  background: #ff0000;
   }
   
   ul.social-icon li:hover:nth-child(1) a:before{
