--- a/shop/used-9.10/css/style.css
+++ b/shop/used-9.10/css/style.css
@@ -66,6 +66,11 @@ body {
   background-color: #fff;
 }
 
+ul.social-icon li .fa{
+  color:red;
+  
+}
+}
 [tabindex="-1"]:focus {
   outline: 0 !important;
 }
