--- a/shop/sneaker-sizes/css/sneaker-sizes.css
+++ b/shop/sneaker-sizes/css/sneaker-sizes.css
@@ -402,4 +402,9 @@
   .navbar-dark .navbar-text a:hover, .navbar-dark .navbar-text a:focus {
     color: #fff;
   }
-  
+
+  body {
+    background-color: red; /* For browsers that do not support gradients */
+    background-image: linear-gradient(black, red); /* Standard syntax (must be last) */
+    background-repeat:no-repeat;
+  }
