--- a/shop/brand-new/css/shop-homepage.css
+++ b/shop/brand-new/css/shop-homepage.css
@@ -13,11 +13,11 @@ body {
 }
 
 .pagination a.active {
-  background-color: lightgrey;
+  background-color: darkred;
   color: white;
 }
 
-.pagination a:hover:not(.active) {background-color: #ddd;}
+.pagination a:hover:not(.active) {background-color: rgb(0, 0, 0);}
 
 
 .social-icons a {
@@ -62,7 +62,7 @@ ul.social-icon{
   }
   ul.social-icon li .fa{
   font-size: 40px;
-  color: #262626;
+  color: #fd0000;
   line-height: 80px;
   transition: .5s;
   
@@ -175,7 +175,9 @@ ul.social-icon{
   float: left;
   text-align: left
 }
-
+.bg-dark{
+  background-color: #000 !important;
+}
 
 .navbar {
   position: relative;
@@ -586,5 +588,8 @@ ul.social-icon{
   top:-100px
 }
 .my-4{
+  color: white;
+}
+.pagination a{
   color: white;
 }
