--- a/shop/brand-new/css/page1-social-icons.css
+++ b/shop/brand-new/css/page1-social-icons.css
@@ -13,22 +13,24 @@ ul.social-icon{
     }
     ul.social-icon li .fa{
     font-size: 40px;
-    color: #ff0000;
+    color: #ffffff;
     line-height: 80px;
     transition: .5s;
     
     }
+    
     ul.social-icon li a{
     position: relative;
     display: block;
     width: 80px;
     height:80px;
-    background-color: #fff;
+    background-color: rgb(47, 100, 214);
     text-align: center;
     transform: perspective(100px) rotate(-30deg) skew(25deg) translate(0,0);
     transition: .5s;
-    box-shadow: -20px 20px 10px rgb(255, 0, 0);
+    box-shadow: -20px 20px 10px rgb(0, 0, 0);
     }
+
     ul.social-icon li a::before{
     content: "";
     position: absolute;
@@ -36,7 +38,7 @@ ul.social-icon{
     left: -20px;
     height: 100%;
     width: 20px;
-    background: #ff0000;
+    background: rgb(255, 0, 255);
     transition: .5s;
     transform: rotate(0deg) skewY(-45deg);
     }
@@ -47,42 +49,45 @@ ul.social-icon{
     left: -11px;
     height: 20px;
     width: 100%;
-    background: #ff0000;
+    background: rgb(214, 211, 47);
     transition: .5s;
     transform: rotate(0deg) skewX(-45deg);
     }
     ul.social-icon li a:hover{
     transform: perspective(1000px) rotate(-30deg) skew(25deg) translate(20px, -20px);
-    box-shadow: -50px 50px 50px rgb(0, 0, 0);
+    box-shadow: -50px 50px 50px rgb(47, 100, 214);
     }
     ul.social-icon li:hover .fa{
     color: rgb(255, 255, 255);
-    }
+    } 
+    ul.social-icon li:hover .a{
+        color: rgb(255, 255, 255);
+        }
     ul.social-icon li a:hover{
     transform: perspective(1000px) rotate(-30deg) skew(25deg) translate(20px, -20px);
-    box-shadow: -50px 50px 50px rgba(0, 0, 0, 0.89);
+    box-shadow: -50px 50px 50px rgb(255, 1, 170);
     }
     ul.social-icon li:hover:nth-child(1) a{
-    background: #000000;
+    background: rgb(47, 100, 214);
     }
-    
+
     ul.social-icon li:hover:nth-child(1) a:before{
-    background: #ff0000;
+    background: rgb(47, 100, 214);
     }
     ul.social-icon li:hover:nth-child(1) a:after{
-    background: #ff0000;
+    background:;
     }
     ul.social-icon li:hover:nth-child(2) a{
-    background: #ff0000;
+    background: rgb(255, 1, 170);
     }
     ul.social-icon li:hover:nth-child(2) a:before{
-    background: #000000;
+    background: rgb(231, 199, 15);
     }
     ul.social-icon li:hover:nth-child(2) a:after{
-    background: #0c0c0c;
+    background: rgb(231, 199, 15);
     }
     ul.social-icon li:hover:nth-child(3) a{
-    background: #dd4b39;
+    background: #ff06de;
     }
     
     ul.social-icon li:hover:nth-child(3) a:before{
@@ -113,5 +118,16 @@ ul.social-icon{
     ul.social-icon li:hover:nth-child(5) a:after{
     background: linear-gradient(#400080, transparent), linear-gradient(200deg, #d047d1, #ff0000, #ffff00);
     }
-  
-  
+.fa.fa-instagram  {
+color: yellow !important;
+}
+
+
+
+
+ul.social-icon li a::after{
+    color: yellow !important;
+}
+ul.social-icon li a::after{
+    color: yellow !important;
+}
