updated the 'social-icons.css' to have blue background with white text-color

--- a/shop/used-9.10/css/style.css
+++ b/shop/used-9.10/css/style.css
@@ -66,9 +66,6 @@ body {
   background-color: #fff;
 }
 
-ul.social-icon li .fa{
-  color:red;
-}
 
 hr {
   box-sizing: content-box;
@@ -10053,7 +10050,7 @@ a.text-dark:hover, a.text-dark:focus {
   }
 }
 .header {
-  background: #000;
+  /* background: #000; */
   color: #f1f1f1;}
 
 .py-5 {
@@ -10131,6 +10128,6 @@ a.text-dark:hover, a.text-dark:focus {
 /*# sourceMappingURL=bootstrap.css.map */
 body {
   background-color: red!important; /* For browsers that do not support gradients */
-  background-image: linear-gradient(red, black)!important; /* Standard syntax (must be last) */
+  background-image: linear-gradient(lightgrey, red)!important; /* Standard syntax (must be last) */
   background-repeat:no-repeat!important;
 }
