--- a/shop/used-9.10/css/style.css
+++ b/shop/used-9.10/css/style.css
@@ -10127,7 +10127,7 @@ a.text-dark:hover, a.text-dark:focus {
 
 /*# sourceMappingURL=bootstrap.css.map */
 body {
-  background-color: red!important; /* For browsers that do not support gradients */
-  background-image: linear-gradient(lightgrey, red)!important; /* Standard syntax (must be last) */
+  background-color: darkred !important; /* For browsers that do not support gradients */
+  background-image: linear-gradient(lightgrey, darkred)!important; /* Standard syntax (must be last) */
   background-repeat:no-repeat!important;
 }
