--- a/shop/brand-new/css/social-icons.css
+++ b/shop/brand-new/css/social-icons.css
@@ -18,11 +18,11 @@ ul.social-icon li a{
     display: block;
     width: 80px;
     height:80px;
-    background-color: #0066ff;
+    background-color: #3b5999;
     text-align: center;
     transform: perspective(100px) rotate(-30deg) skew(25deg) translate(0,0);
     transition: .5s;
-    box-shadow: -20px 20px 10px #0066ff;
+    box-shadow: -20px 20px 10px#3b5999;
 }
 ul.social-icon li a::before{
     content: "";
@@ -31,7 +31,7 @@ ul.social-icon li a::before{
     left: -20px;
     height: 100%;
     width: 20px;
-    background: #0066ff;
+    background: #3b5999;
     transition: .5s;
     transform: rotate(0deg) skewY(-45deg);
 }
@@ -42,7 +42,7 @@ ul.social-icon li a::after{
     left: -11px;
     height: 20px;
     width: 100%;
-    background: #0066ff;
+    background: #3b5999;
     transition: .5s;
     transform: rotate(0deg) skewX(-45deg);
 }
@@ -58,10 +58,10 @@ ul.social-icon li a:hover{
     box-shadow: -50px 50px 50px rgba(0, 0, 0, 0.89);
 }
 ul.social-icon li:hover:nth-child(1) a{
-    background: #0066ff;
+    background:#3b5999;
 }
 ul.social-icon li:hover:nth-child(1) a:before{
-    background: #0066ff;
+    background: #3b5999;
 }
 ul.social-icon li:hover:nth-child(1) a:after{
     background: #0066ff;
