--- a/shop/sneaker-sizes/css/sneaker-sizes.css
+++ b/shop/sneaker-sizes/css/sneaker-sizes.css
@@ -421,4 +421,18 @@
     text-align: left
   }
   
+  .card button {
+    border: none;
+    outline: 0;
+    padding: 12px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+  }
   
+  .card button:hover {
+    opacity: 0.7;
+  }
