--- a/shop/sneaker-sizes/css/popup.css
+++ b/shop/sneaker-sizes/css/popup.css
@@ -3,12 +3,9 @@
 
 
   .box {
-    width: 40%;
     margin: 0 auto;
     background: rgba(255,255,255,0.2);
-    padding: 35px;
     border: 2px solid #fff;
-    border-radius: 20px/50px;
     background-clip: padding-box;
     text-align: center;
   }
@@ -17,12 +14,12 @@
     font-size: 1em;
     padding: 10px;
     color: #fff;
-    border: 2px solid #06D85F;
+    border: 2px solid rgb(12, 12, 12);
     border-radius: 20px/50px;
     text-decoration: none;
   }
   .button:hover {
-    background: #06D85F;
+    background: rgb(3, 3, 3);
   }
   
   .overlay {
@@ -67,7 +64,7 @@
     color: #333;
   }
   .popup .close:hover {
-    color: #06D85F;
+    color: rgb(2, 2, 2);
   }
   .popup .content {
     max-height: 30%;
