--- a/about/css/social-icon.css
+++ b/about/css/social-icon.css
@@ -13,7 +13,7 @@ ul.social-icon{
     }
     ul.social-icon li .fa{
     font-size: 40px;
-    color: #ff0000;
+    color: rgb(98, 64, 191);
     line-height: 80px;
     transition: .5s;
     
