--- a/shop/used-9.10/css/style.css
+++ b/shop/used-9.10/css/style.css
@@ -5655,7 +5655,8 @@ a.badge-dark:focus, a.badge-dark.focus {
   font-weight: 700;
   line-height: 1;
   color: #000;
-  text-shadow: 0 1px 0 #fff;
+  text-shadow: black!important;
+  color:darkred !important;
   opacity: .5;
 }
 
