--- a/shop/brand-new/css/shop-homepage.css
+++ b/shop/brand-new/css/shop-homepage.css
@@ -1,3 +1,13 @@
+#right-footer {
+  float: right;
+  text-align: right;
+}
+
+#left-footer {
+  float: left;
+  text-align: left;
+}
+
 body {
   padding-top: 56px;
 }
