--- a/shop/used-8.10/css/social-icon.css
+++ b/shop/used-8.10/css/social-icon.css
@@ -1,107 +1,130 @@
-ul.social-icon{
-    margin: 0;
-    padding: 0;
-    display: flex;
+ul.social-icon {
+	margin: 0;
+	padding: 0;
+	display: flex;
 }
-ul.social-icon li{
-    list-style: none;
-    margin: 0 40px;
+
+ul.social-icon li {
+	list-style: none;
+	margin: 0 40px;
 }
-ul.social-icon li .fa{
-    font-size: 40px;
-    color: #0066ff;
-    line-height: 80px;
-    transition: .5s;
+
+ul.social-icon li .fa {
+	font-size: 40px;
+	color: #262626;
+	line-height: 80px;
+	transition: .5s;
 }
-ul.social-icon li a{
-    position: relative;
-    display: block;
-    width: 80px;
-    height:80px;
-    background-color: #0066ff;
-    text-align: center;
-    transform: perspective(100px) rotate(-30deg) skew(25deg) translate(0,0);
-    transition: .5s;
-    box-shadow: -20px 20px 10px #0066ff;
+
+ul.social-icon li a {
+	position: relative;
+	display: block;
+	width: 80px;
+	height: 80px;
+	background-color: #fff;
+	text-align: center;
+	transform: perspective(100px) rotate(-30deg) skew(25deg) translate(0, 0);
+	transition: .5s;
+	box-shadow: -20px 20px 10px rgb(0, 0, 0, 0.5);
 }
-ul.social-icon li a::before{
-    content: "";
-    position: absolute;
-    top: 10px;
-    left: -20px;
-    height: 100%;
-    width: 20px;
-    background: #0066ff;
-    transition: .5s;
-    transform: rotate(0deg) skewY(-45deg);
+
+ul.social-icon li a::before {
+	content: "";
+	position: absolute;
+	top: 10px;
+	left: -20px;
+	height: 100%;
+	width: 20px;
+	background: #b1b1b1;
+	transition: .5s;
+	transform: rotate(0deg) skewY(-45deg);
 }
-ul.social-icon li a::after{
-    content: "";
-    position: absolute;
-    top: 80px;
-    left: -11px;
-    height: 20px;
-    width: 100%;
-    background: #0066ff;
-    transition: .5s;
-    transform: rotate(0deg) skewX(-45deg);
+
+ul.social-icon li a::after {
+	content: "";
+	position: absolute;
+	top: 80px;
+	left: -11px;
+	height: 20px;
+	width: 100%;
+	background: #b1b1b1;
+	transition: .5s;
+	transform: rotate(0deg) skewX(-45deg);
 }
-ul.social-icon li a:hover{
-    transform: perspective(1000px) rotate(-30deg) skew(25deg) translate(20px, -20px);
-    box-shadow: -50px 50px 50px rgb(0, 0, 0);
+
+ul.social-icon li a:hover {
+	transform: perspective(1000px) rotate(-30deg) skew(25deg) translate(20px, -20px);
+	box-shadow: -50px 50px 50px rgb(0, 0, 0, 0.5);
 }
-ul.social-icon li:hover .fa{
-    color: rgb(255, 255, 255);
+
+ul.social-icon li:hover .fa {
+	color: #fff;
 }
-ul.social-icon li a:hover{
-    transform: perspective(1000px) rotate(-30deg) skew(25deg) translate(20px, -20px);
-    box-shadow: -50px 50px 50px rgba(0, 0, 0, 0.89);
+
+ul.social-icon li a:hover {
+	transform: perspective(1000px) rotate(-30deg) skew(25deg) translate(20px, -20px);
+	box-shadow: -50px 50px 50px rgb(0, 0, 0, 0.5);
 }
-ul.social-icon li:hover:nth-child(1) a{
-    background: #0066ff;
+
+ul.social-icon li:hover:nth-child(1) a {
+	background: #3b5999;
 }
-ul.social-icon li:hover:nth-child(1) a:before{
-    background: #0066ff;
+
+ul.social-icon li:hover:nth-child(1) a:before {
+	background: #2e4a86;
 }
-ul.social-icon li:hover:nth-child(1) a:after{
-    background: #0066ff;
+
+ul.social-icon li:hover:nth-child(1) a:after {
+	background: #4a69ad;
 }
-ul.social-icon li:hover:nth-child(2) a{
-    background: #0066ff;
+
+ul.social-icon li:hover:nth-child(2) a {
+	background: #55acee;
 }
-ul.social-icon li:hover:nth-child(2) a:before{
-    background: #0066ff;
+
+ul.social-icon li:hover:nth-child(2) a:before {
+	background: #4184b7;
 }
-ul.social-icon li:hover:nth-child(2) a:after{
-    background: #0066ff;
+
+ul.social-icon li:hover:nth-child(2) a:after {
+	background: #4d9fde;
 }
-ul.social-icon li:hover:nth-child(3) a{
-    background: #0066ff;
+
+ul.social-icon li:hover:nth-child(3) a {
+	background: #dd4b39;
 }
-ul.social-icon li:hover:nth-child(3) a:before{
-    background: #0066ff;
+
+ul.social-icon li:hover:nth-child(3) a:before {
+	background: #c13929;
 }
-ul.social-icon li:hover:nth-child(3) a:after{
-    background: #0066ff;
+
+ul.social-icon li:hover:nth-child(3) a:after {
+	background: #e83322;
 }
-ul.social-icon li:hover:nth-child(4) a{
-    background: #0066ff;
+
+ul.social-icon li:hover:nth-child(4) a {
+	background: #0077B5;
 }
-ul.social-icon li:hover:nth-child(4) a:before{
-    background: #036aa0;
+
+ul.social-icon li:hover:nth-child(4) a:before {
+	background: #036aa0;
 }
-ul.social-icon li:hover:nth-child(4) a:after{
-    background: #0d82bf;
+
+ul.social-icon li:hover:nth-child(4) a:after {
+	background: #0d82bf;
 }
-ul.social-icon li:hover:nth-child(5) a{
-    background: linear-gradient(#400080, transparent), linear-gradient(200deg, #d047d1, #0066ff, #ffff00);
+
+ul.social-icon li:hover:nth-child(5) a {
+	background: linear-gradient(#400080, transparent), linear-gradient(200deg, #d047d1, #ff0000, #ffff00);
 }
-ul.social-icon li:hover:nth-child(5) a:before{
-    background: linear-gradient(#400080, transparent), linear-gradient(200deg, #d047d1, #0066ff, #ffff00);
+
+ul.social-icon li:hover:nth-child(5) a:before {
+	background: linear-gradient(#400080, transparent), linear-gradient(200deg, #d047d1, #ff0000, #ffff00);
 }
-ul.social-icon li:hover:nth-child(5) a:after{
-    background: linear-gradient(#400080, transparent), linear-gradient(200deg, #d047d1, #0066ff, #ffff00);
+
+ul.social-icon li:hover:nth-child(5) a:after {
+	background: linear-gradient(#400080, transparent), linear-gradient(200deg, #d047d1, #ff0000, #ffff00);
 }
-ul.social-icon li .fa{
-    color:white;
-}
+
+
+/* Social Icons End */
