--- a/about/css/social-icon.css
+++ b/about/css/social-icon.css
@@ -1,4 +1,3 @@
-
 ul.social-icon{
     margin: 0;
     padding: 0;
@@ -13,7 +12,7 @@ ul.social-icon{
     }
     ul.social-icon li .fa{
     font-size: 40px;
-    color: rgb(98, 64, 191);
+    color: #262626;
     line-height: 80px;
     transition: .5s;
     
@@ -27,7 +26,7 @@ ul.social-icon{
     text-align: center;
     transform: perspective(100px) rotate(-30deg) skew(25deg) translate(0,0);
     transition: .5s;
-    box-shadow: -20px 20px 10px rgb(255, 0, 0);
+    box-shadow: -20px 20px 10px rgb(0, 0, 0, 0.5);
     }
     ul.social-icon li a::before{
     content: "";
@@ -36,7 +35,7 @@ ul.social-icon{
     left: -20px;
     height: 100%;
     width: 20px;
-    background: #ff0000;
+    background: #b1b1b1;
     transition: .5s;
     transform: rotate(0deg) skewY(-45deg);
     }
@@ -47,39 +46,39 @@ ul.social-icon{
     left: -11px;
     height: 20px;
     width: 100%;
-    background: #ff0000;
+    background: #b1b1b1;
     transition: .5s;
     transform: rotate(0deg) skewX(-45deg);
     }
     ul.social-icon li a:hover{
     transform: perspective(1000px) rotate(-30deg) skew(25deg) translate(20px, -20px);
-    box-shadow: -50px 50px 50px rgb(0, 0, 0);
+    box-shadow: -50px 50px 50px rgb(0, 0, 0, 0.5);
     }
     ul.social-icon li:hover .fa{
-    color: rgb(255, 255, 255);
+    color: #fff;
     }
     ul.social-icon li a:hover{
     transform: perspective(1000px) rotate(-30deg) skew(25deg) translate(20px, -20px);
-    box-shadow: -50px 50px 50px rgba(0, 0, 0, 0.89);
+    box-shadow: -50px 50px 50px rgb(0, 0, 0, 0.5);
     }
     ul.social-icon li:hover:nth-child(1) a{
-    background: #000000;
+    background: #3b5999;
     }
     
     ul.social-icon li:hover:nth-child(1) a:before{
-    background: #ff0000;
+    background: #2e4a86;
     }
     ul.social-icon li:hover:nth-child(1) a:after{
-    background: #ff0000;
+    background: #4a69ad;
     }
     ul.social-icon li:hover:nth-child(2) a{
-    background: #ff0000;
+    background: #55acee;
     }
     ul.social-icon li:hover:nth-child(2) a:before{
-    background: #000000;
+    background: #4184b7;
     }
     ul.social-icon li:hover:nth-child(2) a:after{
-    background: #0c0c0c;
+    background: #4d9fde;
     }
     ul.social-icon li:hover:nth-child(3) a{
     background: #dd4b39;
@@ -93,7 +92,7 @@ ul.social-icon{
     }
     
     ul.social-icon li:hover:nth-child(4) a{
-    background: rgb(255, 0, 0);
+    background: #0077B5;
     }
     
     ul.social-icon li:hover:nth-child(4) a:before{
@@ -115,3 +114,4 @@ ul.social-icon{
     }
   
   
+  /* Social Icons End */
