--- a/shop/used-9.10/css/style.css
+++ b/shop/used-9.10/css/style.css
@@ -10109,7 +10109,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .btn-outline-success.disabled, .btn-outline-success:disabled {
-  color: rgb(136, 7, 7)!!important;
+  color: rgb(136, 7, 7);
   background-color: transparent;
 }
 
@@ -10139,3 +10139,4 @@ body {
   font-size: 1.5rem;
     font-weight: 500; 
 }
+`
